[package]
name = "cwc"
version = "0.1.0"
authors = ["Josh"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# The generated code depends on lalrpop-util.
#
# The generated tokenizer depends on the regex crate.
#
# (If you write your own tokenizer, or already have the regex
# crate, you can skip this dependency.)
[dependencies]
lalrpop-util = "0.19.5"
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19.5"
# If you are supplying your own external lexer you can disable default features so that the
# built-in lexer feature is not included
# lalrpop = { version = "0.19.1", default-features = false }